@@ -1,0 +1,3 @@
+libnames := controldata
+
+libsrcs_controldata := src/PVMonitor.cc src/PVControl.cc src/ConfigV1.cc
