@@ -1,2 +1,2 @@
 # List of packages (low level first)
-packages := acqiris camera evr opal1k pulnix xtc app
+packages := acqiris camera evr opal1k pulnix control xtc app
