@@ -1,7 +1,7 @@
 #include "pdsdata/xtc/ClockTime.hh"
 
 
-Pds::ClockTime::ClockTime() : _low(0), _high(0) {}
+Pds::ClockTime::ClockTime() {}
 Pds::ClockTime::ClockTime(const ClockTime& t) : _low(t._low), _high(t._high) {}
 Pds::ClockTime::ClockTime(unsigned sec, unsigned nsec) : _low(nsec), _high(sec) {}
 
@@ -14,5 +14,5 @@ Pds::ClockTime& Pds::ClockTime::ClockTime::operator=(const ClockTime& input)
 
 bool Pds::ClockTime::ClockTime::operator>(const ClockTime& t) const
 {
-  return (_high > t._high) | (_high == t._high && _low > t._low);
+  return (_high > t._high) || (_high == t._high && _low > t._low);
 }
